--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,7 @@
       "src": "dist/app.js",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": [
-          "dist/**"
-        ]
+        "includeFiles": ["dist/**"]
       }
     }
   ],
