--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "moduleResolution": "Bundler",
     "module": "ESNext",
     "noEmit": true,
-    "lib": ["es2022"]
+    "lib": ["es2022"],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
