--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src && tsc",
-    "build": "esbuild src/app.ts --bundle --platform=node --outfile=dist/app.js --format=esm --minify",
+    "build": "esbuild src/app.ts --bundle --platform=node --outfile=dist/app.js --format=esm --minify=true",
     "start": "node dist/app.js",
     "dev:tsc": "tsc --watch --preserveWatchOutput",
     "dev:node": "node --watch dist/app.js",
