--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src && tsc",
-    "build": "esbuild src/app.ts --bundle --platform=node --outfile=dist/app.js --format=esm --minify=true",
+    "build": "esbuild src/app.ts --bundle --platform=node --outfile=dist/app.js --format=esm --packages=external --minify",
     "start": "node dist/app.js",
     "dev:tsc": "tsc --watch --preserveWatchOutput",
     "dev:node": "node --watch dist/app.js",
     "dev:esbuild": "pnpm run build --watch",
     "dev": "run-p dev:*",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "all": "pnpm lint && pnpm format && pnpm build"
   },
   "keywords": [],
   "author": "",
@@ -46,7 +48,6 @@
     "eslint": "^8.41.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
-    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
