--- a/package.json
+++ b/package.json
@@ -3,49 +3,51 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/app.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint src && tsc",
-    "build": "esbuild src/app.ts --bundle --platform=node --outfile=dist/app.js --format=esm --packages=external --minify",
+    "build": "rimraf dist && tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
     "start": "node dist/app.js",
-    "dev:tsc": "tsc --watch --preserveWatchOutput",
-    "dev:node": "node --watch dist/app.js",
-    "dev:esbuild": "pnpm run build --watch",
-    "dev": "run-p dev:*",
-    "format": "prettier --write .",
-    "all": "pnpm lint && pnpm format && pnpm build"
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/app.ts",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tsconfig/node16": "^1.0.4",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.37.0",
+    "cloudinary": "^2.0.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.1",
-    "nodemailer": "^6.9.2",
-    "zod": "^3.21.4"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.9",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/nodemailer": "^6.4.8",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "esbuild": "^0.19.5",
-    "eslint": "^8.41.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.0.3",
-    "typescript": "^5.0.4"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/nodemailer": "^6.4.14",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "tscpaths": "^0.0.9",
+    "typescript": "^5.3.3"
   }
 }
