--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,18 +3,24 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "target": "es2022",
-    "verbatimModuleSyntax": true,
     "allowJs": true,
     "resolveJsonModule": true,
     "moduleDetection": "force",
+    "isolatedModules": true,
+    "baseUrl": ".",
+    "outDir": "./dist",
+
     "strict": true,
     "noUncheckedIndexedAccess": true,
-    "moduleResolution": "Bundler",
-    "module": "ESNext",
-    "noEmit": true,
-    "lib": ["es2022"],
+    "strictNullChecks": true,
+
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "lib": ["ES2022"],
+
     "paths": {
       "@/*": ["./src/*"]
     }
-  }
+  },
+  "include": ["src/*"]
 }
