--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint src && tsc",
+    "lint": "eslint src",
     "build": "rimraf dist && tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
     "start": "node dist/app.js",
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/app.ts",
