add google oauth

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "target": "es2022",
+    "target": "ESNext",
     "allowJs": true,
     "resolveJsonModule": true,
     "moduleDetection": "force",
@@ -14,13 +14,12 @@
     "noUncheckedIndexedAccess": true,
     "strictNullChecks": true,
 
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "lib": ["ES2022"],
 
     "paths": {
       "@/*": ["./src/*"]
     }
-  },
-  "include": ["src/**/*"]
+  }
 }
