--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/app.js",
+  "type": "module",
   "scripts": {
-    "test": "jest",
-    "lint": "eslint src",
-    "build": "rimraf dist && tsc && tscpaths -p tsconfig.json -s ./src -o ./dist",
+    "lint": "tsc --noEmit && eslint src",
     "start": "node dist/app.js",
-    "dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/app.ts",
+    "dev": "tsx watch src/app.ts",
+    "build": "esbuild src/app.ts --bundle --platform=node --packages=external --outfile=dist/app.js --format=esm",
     "format": "prettier --write ."
   },
   "keywords": [],
@@ -16,38 +16,36 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.0.0",
     "colors": "^1.4.0",
-    "cookie-parser": "^1.4.6",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.9",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/express-session": "^1.18.0",
     "@types/morgan": "^1.9.9",
     "@types/nodemailer": "^6.4.14",
-    "@types/supertest": "^6.0.2",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.14",
+    "@types/passport-local": "^1.0.38",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "esbuild": "^0.20.2",
     "eslint": "^8.56.0",
-    "jest": "^29.7.0",
     "prettier": "^3.2.5",
-    "supertest": "^6.3.4",
-    "ts-jest": "^29.1.2",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0",
-    "tscpaths": "^0.0.9",
-    "typescript": "^5.3.3"
+    "tsx": "^4.7.2",
+    "typescript": "5.3.3"
   }
 }
