--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "colors": "^1.4.0",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "mongoose": "^8.1.1",
+    "mongoose": "^8.5.4",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.9",
+    "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "zod": "^3.22.4"
+    "stripe": "^16.8.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -36,16 +37,16 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/morgan": "^1.9.9",
-    "@types/nodemailer": "^6.4.14",
+    "@types/nodemailer": "^6.4.15",
     "@types/passport": "^1.0.16",
-    "@types/passport-google-oauth20": "^2.0.14",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "esbuild": "^0.20.2",
-    "eslint": "^8.56.0",
-    "prettier": "^3.2.5",
-    "tsx": "^4.7.2",
-    "typescript": "5.3.3"
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
+    "esbuild": "^0.23.1",
+    "eslint": "^8.57.0",
+    "prettier": "^3.3.3",
+    "tsx": "^4.17.0",
+    "typescript": "5.5.4"
   }
 }
